crates/unblock-cli/tests/snapshots/migrate_doctor__migrate_report_never_migrated.snap
---
source: crates/unblock-cli/tests/migrate_doctor.rs
expression: report
---
{
  "findings": [
    {
      "detail": "<db-path>",
      "label": "database"
    },
    {
      "detail": "0",
      "label": "schema_from"
    },
    {
      "detail": "2",
      "label": "schema_to"
    },
    {
      "detail": "true",
      "label": "applied"
    }
  ],
  "kind": "info"
}
